<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NowPlayingRelativeLayout"
    tools:context="com.example.android.udaplayer.NowPlaying">


    <ImageView
        android:id="@+id/HomeButton"
        style="@style/BackToMainScreenImage" />

    <ImageView
        android:id="@+id/GoToPlaylist"
        style="@style/GoToPlaylistImage" />

    <TextView
        style="@style/NowPlayingExplanation"
        android:text="@string/nowPlayingActivityExplanation" />


    <ImageView
        android:id="@+id/imageView"
        style="@style/PianoImage" />


    <LinearLayout
        android:id="@+id/playingLinear"
        style="@style/SymbolsLinearNowPlaying">

        <ImageView
            android:id="@+id/ShuffleButton"
            style="@style/ShuffleSymbol" />

        <ImageView
            style="@style/RewindnNextSymbols"
            android:src="@drawable/rewind" />

        <ImageView style="@style/PlaySymbol" />

        <ImageView
            style="@style/RewindnNextSymbols"
            android:src="@drawable/forward" />

        <ImageView style="@style/RepeatSymbol" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/SeekBarLinear">

        <TextView
            style="@style/StartnEndTimeSeekBar"
            android:text="@string/starttimeseekbar" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="200dp"
            android:layout_height="25dp" />

        <TextView
            style="@style/StartnEndTimeSeekBar"
            android:text="@string/endtimeseekbar" />

    </LinearLayout>


</RelativeLayout>
